Fixed postion of featured employer component, scroll on overflow

--- a/src/modules/JobSeek/components/FeaturedEmployer/FeaturedEmployer.css
+++ b/src/modules/JobSeek/components/FeaturedEmployer/FeaturedEmployer.css
@@ -28,4 +28,9 @@
   padding: auto;
 }
 
+.overflow {
+  height: 220px;
+  overflow-y: overlay;
+}
+
 
